Color picker: UI, fix radius n add visual padding
- Before indicators were positioned in such a way that they would
, rightly so, inside of the main parent (visible on hover status)
but it would unfortunately spill over some of the icons (example:
in the font colour goes above "A")
  - Use whit outline so we keep the same positioning but creating that
  white separator
- Fix radius: Use round corners for these indicators instead of
a harsh rectangle to denote that this element is not a simple
icon detail or a small btn but instead an indicator

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -688,6 +688,8 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 	position: relative;
 	top: -6px;
 	border: 1px solid var(--gray-color);
+	border-radius: 7px;
+	outline: 1px solid white;
 }
 
 /* dropdown arrow */
